# AoC2024

./: .gitignore  CMakeLists.txt  README
01/: Exercise  Exercise.md  main.cpp
02/: main.cpp
03/: main.cpp  new_input.txt
functions/: CMakeLists.txt
